--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 
 	</section>
 
-
+<section class="soc">
+	<h4 class="social>Social Media</h4>
+		   <script type="text/javascript" src="https://www.juicer.io/embed/carlossswift/embed-code.js" async defer></script>
+													      </section>
+	
 <section class="Coninfo">
 <h4 class="CInfo">Contact</h4>
 <p class="GIT"> Please get in touch via the mobile or email address below. Leave us your information and a brief message 
