--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css.css">
 	<title>Document</title>
 </head>
 <body>
-
+	<div class="navbar">
+		<div class="dropdown">
+		  <button class="dropbtn">Menu
+			<i class="fa fa-caret-down"></i>
+		  </button>
+		  <div class="dropdown-content">
+			<a href="#">Internal Plastering</a>
+			<a href="#">External Plastering</a>
+			<a href="#">Polished Plastering</a>
+		  </div>
+		</div> 
+	  </div>
 	<header class="header grid">
      <img class="logoheader" src="CS Logo.JPG" alt="logo">
 	</header>
@@ -16,7 +29,7 @@
 		<p>
 			CS Plastering is a family run business, we've been operating in South Yorkshire
 			for the past 10 years. We do all aspects of plastering, along 
-		with bespoke polished plaster & other work. <br><br> For more information on availabliltiy, pricing & what we can offer,
+		with bespoke polished plaster. <br><br> For more information on availabliltiy & what we can offer,
 		feel free to contact us on the information below.
 		</p>
 	</section>
@@ -26,24 +39,22 @@
 		<H4 class="p1">Internal Plastering </H4>
 		<H4 class="p2">External Plastering </H4>
 		<H4 class="p3">Polished Plastering </H4>
-		<H4 class="p4">Other Work </H4>
+		
 		
 		
 		<img class="img1" src="Plaster1.jpg" alt="Internal Plastering">
 		<img class="img2" src="Ren.JPG" alt="External Plastering">
 		<img class="img3" src="P Plaster.jpg" alt="Polished Plaster">
-		<img class="img4" src="Bench.jpg" alt="Bench">
+		
 
 	</section>
 
-<section class="soc">
-	<h4 class="social>Social Media</h4>
-		   <script type="text/javascript" src="https://www.juicer.io/embed/carlossswift/embed-code.js" async defer></script>
-													      </section>
+
+		   										      
 	
 <section class="Coninfo">
 <h4 class="CInfo">Contact</h4>
-<p class="GIT"> Please get in touch via the mobile or email address below. Leave us your information and a brief message 
+<p class="GIT"> Please get in touch via the number or email address below. Leave us your information and a brief message 
 	and we'll get back to you as soon as we can.</p>
 	<form class="form">
 		<label class="Fname" for="FName">You Name:</label>
@@ -63,13 +74,12 @@
 	<section class="contactinfo">
 		<p>Mobile: 07971673884</p>
 		<p>Email: info@cswiftplastering.co.uk</p>
-		<script type="text/javascript" src="https://www.juicer.io/embed/carlossswift/embed-code.js" async defer></script>
-	</section>
+		
 </section>
 </section>
 
 	<Footer class="footer">
-		<p>|| CS Plastering 2022 || SASS MEDIA || info@sassmedia.co.uk ||</p>
+		<p>|| CS Plastering 2022 ||</p>
 	</Footer>
 
 </body>
