--- a/InternalPlastering.html
+++ b/InternalPlastering.html
@@ -16,9 +16,10 @@
 		  </button>
 		  <div class="dropdown-content">
             <a href="index.html">Home</a>
-			<a href="InternalPlastering.html">Internal Plastering</a>
-			<a href="ExternalPlastering.html">External Plastering</a>
-			<a href="PolishedPlastering.html">Polished Plastering</a>
+			<a href="InternalPlastering.html">Internal Plaster</a>
+			<a href="ExternalPlastering.html">External Plaster</a>
+			<a href="PolishedPlastering.html">Polished Plaster</a>
+            <a href="Contactpage.html">Contact us</a>
 		  </div>
 		</div> 
 	  </div>
@@ -39,41 +40,13 @@
 
     <section class="picturetags">
 		
-		<H4 class="p1"  HREF = "InternalPlastering.html">Internal Plastering  </H4>
+		<H4 class="p11"  HREF = "InternalPlastering.html">Internal Plaster  </H4>
 		<div class="row"> 
             <div class="column">
-              <img src="wedding.jpg">
-              <img src="rocks.jpg">
-              <img src="falls2.jpg">
-              <img src="paris.jpg">
-              <img src="nature.jpg">
-              <img src="mist.jpg">
-              <img src="paris.jpg">
-            </div>
-            <div class="column">
-              <img src="underwater.jpg">
-              <img src="ocean.jpg">
-              <img src="wedding.jpg">
-              <img src="mountainskies.jpg">
-              <img src="rocks.jpg">
-              <img src="underwater.jpg">
-            </div> 
-            <div class="column">
-              <img src="wedding.jpg">
-              <img src="rocks.jpg">
-              <img src="falls2.jpg">
-              <img src="paris.jpg">
-              <img src="nature.jpg">
-              <img src="mist.jpg">
-              <img src="paris.jpg">
-            </div>
-            <div class="column">
-              <img src="underwater.jpg">
-              <img src="ocean.jpg">
-              <img src="wedding.jpg">
-              <img src="mountainskies.jpg">
-              <img src="rocks.jpg">
-              <img src="underwater.jpg">
+                <img src="Img/IP/1.jpg">
+                <img src="Img/IP/2.jpg">
+                <img src="Img/IP/3.jpg">
+                
             </div>
           </div>
 
@@ -84,7 +57,7 @@
 		   										      
 	
 <section class="Coninfo">
-<h4 class="CInfo">Contact</h4>
+    <A h4 class="CInfo" href="Contactpage.html">Contact </A></h4>
 <p class="GIT"> Please get in touch via the number or email address below. Leave us your information and a brief message 
 	and we'll get back to you as soon as we can.</p>
 	<form class="form">
