--- a/InternalPlastering.html
+++ b/InternalPlastering.html
@@ -17,7 +17,7 @@
 		.slideshow-container {
 		  display: grid;
 		  
-		  max-width: 1000px;
+		  max-width: none;
 		  position: relative;
 		  margin: 8px;
 		  background-color: rgba(71,245,71,0.1)
