--- a/InternalPlastering.html
+++ b/InternalPlastering.html
@@ -49,7 +49,7 @@
     <div class="pictures">
 
         <div class="p111" HREF = "InternalPlastering.html">Internal  Plaster</div>
-        <p class="info1"> We do all aspects of internal plastering. This includes sand and cement, float, dot and dab, boarding, bonding, patching up's and plastering.</p>
+        <p class="info1"> We do all aspects of internal plastering. This includes sand and cement, float, dot and dab, boarding, bonding, patching up and plastering.</p>
 
         <img src="Img/IP/1.jpg" class="column1">
         <img src="Img/IP/2.jpg" class="column2">
